# SnakeGame

./: Apple.cpp  Apple.h  CMakeLists.txt  OldCode.txt  Scratch.txt  Snake.cpp  Snake.h  Sprite.cpp  Sprite.h  Tracker.cpp  Tracker.h  Trashbag.cpp  Trashbag.h  Trashman.cpp  Trashman.h  main.cpp
cmake_modules/: FindSDL2.cmake
